--- a/tweet-tweet/angular.json
+++ b/tweet-tweet/angular.json
@@ -24,9 +24,8 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css"
-              
-              "src/styles.css"
+              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
+               "src/styles.css"
             ],
             "scripts": []
           },
