--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "atob": "^2.1.2",
     "bcrypt": "^3.0.8",
     "body-parser": "^1.19.0",
     "config": "^3.2.5",
