--- a/tweet-tweet/package.json
+++ b/tweet-tweet/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@fortawesome/fontawesome-free": "^5.12.1",
+    "@ng-bootstrap/ng-bootstrap": "^5.3.0",
     "bootstrap": "^4.4.1",
     "hammerjs": "^2.0.8",
     "ng2-file-upload": "^1.4.0",
