--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.1",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "twit": "^2.2.11"
   }
 }
