--- a/tweet-tweet/package.json
+++ b/tweet-tweet/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~8.2.14",
     "@fortawesome/fontawesome-free": "^5.12.1",
     "@ng-bootstrap/ng-bootstrap": "^5.3.0",
+    "ansi-colors": "^4.1.1",
     "bootstrap": "^4.4.1",
     "hammerjs": "^2.0.8",
     "ng2-file-upload": "^1.4.0",
