--- a/tweet-tweet/package.json
+++ b/tweet-tweet/package.json
@@ -26,6 +26,7 @@
     "ansi-colors": "^4.1.1",
     "bootstrap": "^4.4.1",
     "hammerjs": "^2.0.8",
+    "ng-bootstrap": "^1.6.3",
     "ng2-file-upload": "^1.4.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
